--- a/public/200.html
+++ b/public/200.html
@@ -7,9 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Redirecting...</title>
     </head>
-
     <body>
-
+        <div id="app"></div>
     </body>
 
 </html>
