add css vars for colors font sizes, bgs

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,44 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       :root {
-        --page-bg: #f4f5f7;
-        --base-clr: #172b4d;
-        --active-clr: #0079bf;
-        --list-item-clr: #091e42;
-        --list-item-bg-hover: rgba(9, 30, 66, 0.08);
-        --workspaces-title-clr: #5e6c84;
-        --workspaces-link-bg: #091e420a;
+        --bg-1: #F9FAFC;
+        --bg-2: #fafbfc;
+        
+        --primary-clr-1: #0065ff;
+        --primary-clr-2: #0052CC;
+        --primary-clr-3: #4C9AFF;
+        --primary-clr-4: #026AA7;
+        --primary-clr-5: #0079bf;
+        --primary-clr-6: #0056d9;
+        
+        --dark-clr-1: #172b4d;
+        --dark-clr-2: #091e42;
+        --dark-clr-3: #091e4214;
+        --dark-clr-4: #091e42a8;
+        --dark-clr-5: #091e420a;
+
+        --light-clr-1: #ffffff;
+        --light-clr-2: #FAFBFC;
+        --light-clr-3: #DFE1E6;
+
+        --gray-clr-1: #7a869a;
+        --gray-clr-2: #8993a4;
+        --gray-clr-3: #5e6c84; 
+        --gray-clr-4: #6b778c;
+        --gray-clr-5: #ffffff4d;
+
+        --green-clr-1: #5AAC44;
+
+        --fs-xxxl: 48px;
+        --fs-xxl: 36px;
+        --fs-xl: 24px;
+        --fs-lg: 20px;
+        --fs-md: 24px;
+        --fs-sm: 18px;
+        --fs-xs: 16px;
+        --fs-xss: 14px;
+        --fs-xsss: 12px;
+
       }
     </style>
   </head>
