add debounced search handler

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
         --gray-clr-3: #5e6c84;
         --gray-clr-4: #6b778c;
         --gray-clr-5: #ffffff4d;
+        --gray-clr-6: #42526e;
+
 
         --green-clr-1: #5aac44;
 
