--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       }
     </style>
   </head>
-  <body style="background-color: rgb(0, 121, 191);">
+  <body>
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
